--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -115,42 +115,42 @@
 
 .@{ui-class-prefix}button-group.@{modifier-prefix}mini .@{ui-class-prefix}button,
 .@{ui-class-prefix}input.@{modifier-prefix}mini,
-.@{ui-class-prefix}input.@{modifier-prefix}mini .@{ui-class-prefix}action-container .@{ui-class-prefix}button,
+.@{ui-class-prefix}input.@{modifier-prefix}mini .@{modifier-prefix}action-container .@{ui-class-prefix}button,
 .@{ui-class-prefix}button.@{modifier-prefix}mini {
     font-size: @mini-font-size;
 }
 
 .@{ui-class-prefix}button-group.@{ui-class-prefix}small .@{ui-class-prefix}button,
 .@{ui-class-prefix}input.@{modifier-prefix}small,
-.@{ui-class-prefix}input.@{modifier-prefix}small .@{ui-class-prefix}action-container .@{ui-class-prefix}button,
+.@{ui-class-prefix}input.@{modifier-prefix}small .@{modifier-prefix}action-container .@{ui-class-prefix}button,
 .@{ui-class-prefix}button.@{modifier-prefix}small {
     font-size: @small-font-size;
 }
 
 .@{ui-class-prefix}button-group.@{ui-class-prefix}large .@{ui-class-prefix}button,
 .@{ui-class-prefix}input.@{modifier-prefix}large,
-.@{ui-class-prefix}input.@{modifier-prefix}large .@{ui-class-prefix}action-container .@{ui-class-prefix}button,
+.@{ui-class-prefix}input.@{modifier-prefix}large .@{modifier-prefix}action-container .@{ui-class-prefix}button,
 .@{ui-class-prefix}button.@{modifier-prefix}large {
     font-size: @large-font-size;
 }
 
 .@{ui-class-prefix}button-group.@{ui-class-prefix}big .@{ui-class-prefix}button,
 .@{ui-class-prefix}input.@{modifier-prefix}big,
-.@{ui-class-prefix}input.@{modifier-prefix}big .@{ui-class-prefix}action-container .@{ui-class-prefix}button,
+.@{ui-class-prefix}input.@{modifier-prefix}big .@{modifier-prefix}action-container .@{ui-class-prefix}button,
 .@{ui-class-prefix}button.@{modifier-prefix}big { 
     font-size: @big-font-size;
 }
 
 .@{ui-class-prefix}button-group.@{ui-class-prefix}huge .@{ui-class-prefix}button,
 .@{ui-class-prefix}input.@{modifier-prefix}huge,
-.@{ui-class-prefix}input.@{modifier-prefix}huge .@{ui-class-prefix}action-container .@{ui-class-prefix}button,
+.@{ui-class-prefix}input.@{modifier-prefix}huge .@{modifier-prefix}action-container .@{ui-class-prefix}button,
 .@{ui-class-prefix}button.@{modifier-prefix}huge {
     font-size: @huge-font-size;
 }
 
 .@{ui-class-prefix}button-group.@{ui-class-prefix}massive .@{ui-class-prefix}button,
 .@{ui-class-prefix}input.@{modifier-prefix}massive,
-.@{ui-class-prefix}input.@{modifier-prefix}massive .@{ui-class-prefix}action-container .@{ui-class-prefix}button,
+.@{ui-class-prefix}input.@{modifier-prefix}massive .@{modifier-prefix}action-container .@{ui-class-prefix}button,
 .@{ui-class-prefix}button.@{modifier-prefix}massive {
     font-size: @massive-font-size;
 }
