--- a/src/css/dropdown.less
+++ b/src/css/dropdown.less
@@ -3,7 +3,7 @@
     top: auto;
     left: auto;
     z-index: @zindex-dropdown;
-    &:extend(.list-unstyled);
+    &:extend(.esf-list-unstyled);
 
     li {
         position: relative;
